--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,17 +12,18 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
+    - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-playwright":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -46,6 +47,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
+    - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-puppeteer":
   feature:
     - 
@@ -67,6 +69,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
+    - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-cypress":
   feature:
     - 
@@ -110,6 +113,7 @@ Apollo SDK:
     - Fixed scrolling on some android devices
     - Improved handling of touch padding related issues in native apps
     - Prevented navbar from appearing on Android 12 screenshots
+    - Fixed various issues during taking screenshots in landscape orientation on some native devices
 eyes-browser-extension:
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
