makeSDK - send cwd from plugin and support tag name as a string in check (#1013)
* makeSDK - send cwd from plugin and support tag name as a string in check

* update pending changes

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -74,7 +74,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Support string tag name in eyesCheck
 "@applitools/eyes-storybook":
   feature:
     - Allow configuration file to be loaded from ancestor directories
