Universal server idle timeout (#1011)
* add detached to ServerOptions and don't close universal server when idletimeout is 0

* Update js/packages/eyes-universal/src/universal-server-process.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* fix Kyrylo's notes

* dont call setTimeout when idleTimeout is set to zero

* adjust close listner when timeout is zero

* update pending changes for cypress

* update pending changes

* cypress - send idleTimeout zero to makeServerProcess

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>
Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,8 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
-    - 
+    - |
+      Add the option to cancel `idleTimeout` when sending zero as the value and add the option to send `detached` to `makeServerProcess`
   bug-fix:
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-selenium":
@@ -72,7 +73,7 @@ Apollo SDK:
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-cypress":
   feature:
-    - 
+    - Internal architecture fixes
   bug-fix:
     - 
 "@applitools/eyes-storybook":
