[Cypress] Support padded element (#1014)
* support padded element

* update README

* update pending changes

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -72,7 +72,7 @@ Apollo SDK:
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
 "@applitools/eyes-cypress":
   feature:
-    - 
+    - Add support for padded coded regions
   bug-fix:
     - 
 "@applitools/eyes-storybook":
