js/universal-server: fix driver connection with self-signed cert (#1018)
* js/uni: add failing test for driver communication with a self-signed cert (and no proxy)

* js/uni: add an https agent with `rejectUnauthorized: false` to the driver communication when not using a proxy

* js/uni: add http agent as well to address wdio type error on build

* js/uni: fix lint

* js/uni: add pending changes entry

* js/uni: combined proxy & self-signed cert tests into one

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Support self-signed certificates when communicating with the driver
 "@applitools/eyes-selenium":
   feature:
     - 
