--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -92,6 +92,7 @@
     "ncp": "2.0.0",
     "node-fetch": "2.6.0",
     "prettier": "1.19.1",
+    "semver": "^7.3.7",
     "typescript": "4.6.4"
   },
   "engines": {
