--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Better support in DOM slot element 
 "@applitools/eyes-selenium":
   feature:
     - 
@@ -20,12 +20,14 @@ Apollo SDK:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
     - Avoided unexpected touch actions during `check` on Android apps
+    - Better support in DOM slot element
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
     - Avoided unexpected touch actions during `check` on Android apps
+    - Better support in DOM slot element
 "@applitools/eyes-playwright":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -44,6 +46,7 @@ Apollo SDK:
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
+    - Better support in DOM slot element
 "@applitools/eyes-protractor":
   feature:
     - 
@@ -51,11 +54,13 @@ Apollo SDK:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
     - Avoided unexpected touch actions during `check` on Android apps
+    - Better support in DOM slot element
 "@applitools/eyes-puppeteer":
   feature:
     - 
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
+    - Better support in DOM slot element
 "@applitools/eyes-testcafe":
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
@@ -67,6 +72,7 @@ Apollo SDK:
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
     - Allow configuration file to be loaded from ancestor directories
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
+    - Better support in DOM slot element
 "@applitools/eyes-nightwatch":
   feature:
     - 
@@ -74,16 +80,18 @@ Apollo SDK:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
     - Avoided unexpected touch actions during `check` on Android apps
+    - Better support in DOM slot element
 "@applitools/eyes-cypress":
   feature:
     - Add support for padded coded regions
   bug-fix:
     - Fix `npx eyes-setup` for Cypress version with a caret, support `e2e.ts` as support file
+    - Better support in DOM slot element
 "@applitools/eyes-storybook":
   feature:
     - 
   bug-fix:
-    - 
+    - Better support in DOM slot element 
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
@@ -119,6 +127,7 @@ Apollo SDK:
     - Prevented navbar from appearing on Android 12 screenshots
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
     - Avoided unexpected touch actions during `check` on Android apps
+    - Better support in DOM slot element
 eyes-browser-extension:
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -133,8 +142,9 @@ eyes-browser-extension:
     - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
     - |
       Fixed `forceFullPageScreenshot` option behavior
+    - Better support in DOM slot element  
 applitools-for-selenium-ide:
   feature:
     - 
   bug-fix:
-    - 
+    - Better support in DOM slot element 
