--- a/python/eyes_robotframework/setup.cfg
+++ b/python/eyes_robotframework/setup.cfg
@@ -10,6 +10,9 @@ replace = [{new_version}] - {now:%%Y-%%m-%%d}
 
 [bumpversion:file:src/EyesLibrary/__version__.py]
 
+[bdist_wheel]
+universal = True
+
 [metadata]
 name = eyes-robotframework
 description = Applitools Python SDK. Robot Framework package
@@ -18,25 +21,24 @@ author_email = team@applitools.com
 url = http://www.applitools.com
 long_description = file: README.rst
 license = Applitools SDK License
-license_file = LICENSE
+license_files = LICENSE
 platforms = Linux, MacOS, Windows
 keywords = applitools, robotframework, eyes, eyes_selenium, selenium, appium
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Framework :: Robot Framework :: Library
 	Intended Audience :: Developers
 	Programming Language :: Python
 	Topic :: Software Development :: Quality Assurance
 	Topic :: Software Development :: Testing
-project_urls = 
-	Bug Reports = https://github.com/applitools/eyes.sdk.python/issues
-	Source = https://github.com/applitools/eyes.sdk.python/tree/master/eyes_robotframework
+project_urls =
+	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_robotframework
 
 [options]
 packages = find:
-package_dir = 
+package_dir =
 	= src
-install_requires = 
+install_requires =
 	PyYAML>=5,<6
 	eyes_selenium>=5.8.0,<6
 	robotframework-appiumlibrary>=1.5,<1.6      ;python_version<'3.0'
