--- a/python/eyes_selenium/setup.cfg
+++ b/python/eyes_selenium/setup.cfg
@@ -10,18 +10,21 @@ replace = [{new_version}] - {now:%%Y-%%m-%%d}
 
 [bumpversion:file:applitools/selenium/__version__.py]
 
+[bdist_wheel]
+universal = True
+
 [metadata]
-name = eyes_selenium
+name = eyes-selenium
 description = Applitools Python SDK. Selenium package
 author = Applitools Team
 author_email = team@applitools.com
 url = http://www.applitools.com
 long_description = file: README.rst
 license = Applitools SDK License
-license_file = LICENSE
+license_files = LICENSE
 platforms = Linux, MacOS, Windows
 keywords = applitools, eyes, eyes_selenium
-classifiers = 
+classifiers =
 	Programming Language :: Python
 	Development Status :: 4 - Beta
 	Intended Audience :: Developers
@@ -30,10 +33,12 @@ classifiers =
 	Operating System :: POSIX :: Linux
 	Topic :: Software Development :: Quality Assurance
 	Topic :: Software Development :: Testing
+project_urls =
+	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_selenium
 
 [options]
 packages = find:
-install_requires = 
+install_requires =
 	Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
 	Appium-Python-Client<2          ;python_version>='3.0' and python_version<'3.7'
 	Appium-Python-Client<3          ;python_version>='3.7'
