--- a/python/eyes_universal/setup.cfg
+++ b/python/eyes_universal/setup.cfg
@@ -6,21 +6,23 @@ message = Bump eyes_universal version: {current_version} → {new_version}
 
 [bumpversion:file:applitools/eyes_universal/__init__.py]
 
+[bdist_wheel]
+universal = True
+
 [metadata]
 name = eyes-universal
 description = Applitools Eyes Universal SDK Server
 author = Applitools Team
 author_email = team@applitools.com
 url = http://www.applitools.com
-project_urls = 
-	Bug Reports=https://github.com/applitools/eyes.sdk.python/issues
+project_urls =
 	Source=https://github.com/applitools/eyes.sdk.javascript1/tree/master/packages/eyes-universal
 version = attr: applitools.eyes_universal.__version__
 long_description = file: README.rst
 license = Applitools SDK License
-license_file = LICENSE
+license_files = LICENSE
 platforms = Linux, MacOS, Windows
-classifiers = 
+classifiers =
 	Programming Language :: Python
 	Development Status :: 4 - Beta
 	Intended Audience :: Developers
@@ -34,9 +36,3 @@ classifiers =
 packages = find:
 python_requires = >=2.7, <4
 zip_safe = False
-
-[options.package_data]
-* = bin/*
-
-[bdist_wheel]
-universal = True
