--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   verify:
-    if: ${{github.actor != 'dependabot' && !github.event.pull_request.draft}}
+    if: ${{github.actor != 'dependabot[bot]' && !github.event.pull_request.draft}}
     runs-on: ubuntu-latest
     name: Verify changelog
     steps:
@@ -22,7 +22,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: |
-          echo ${{github.actor}}
           echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
           if [[ $(git log origin/master... --grep=NO_CHANGELOG | wc -l) -gt 0 ]]; then
             echo NO_CHANGELOG commit tag found. Skipping changelog check.
