[gh] even better way to skip dependabot triggered wf

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -3,6 +3,7 @@ name: Verify changelog
 on: 
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
+    branches-ignore: ['dependabot/**']
 
 jobs:
   verify:
