--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -2,6 +2,7 @@ name: pre-commit
 
 on:
     pull_request:
+        branches-ignore: ['dependabot/**']
     push:
         branches: [master, develop]
 
