Fix/take screenshot puppeteer (#1040)
* js/sd-puppeteer: update puppeteer version to latest major

* js/sd-puppeteer: add test for takeScreenshot and update the call used in takeScreenshot to access CDP (switching from the private call which is no longer available in puppeteer@14.4.0, to the public one which is available across versions)

* js/sd-puppeteer: update pending changes

* js/sd-puppeteer: update pending changes entry per feedback from Ben

* js/sd-puppeteer: fix build errors

* js/sd-puppeteer: change takeScreenshot to use puppeteer api instead of cdp

* js/sd-puppeteer: fix build error and failing cookie test

* js/sd-puppeteer: skip firefox getCookies test for the time being

* js/sd-puppeteer: fix lint

* fix cookies test

* unskip firefox cookies test

* fix cookies test

Co-authored-by: kyrylo <kyrylo.onufriiev@applitools.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -61,6 +61,7 @@ Apollo SDK:
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Better support in DOM slot element
+    - Fixed breaking API change in Puppeteer used when taking screenshots
 "@applitools/eyes-testcafe":
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
