[py-robot] Rfe 2898 post poscessing of robot test resulsts (#1043)
* feat: save test results after suite execution
* feat: add `propagate_eyes_test_results` option to config
* feat: deprecate `Eyes Get All Test Results` keyword

* fix: not set browsers info

* test: run robot tests headless
* test: improve test matching in robot
* test: check that report html contain one diff
* test: speed up robot test execution by limiting number of test to run on all devices
* test: move local_chrome_driver to common conftest.py
* test: refactor test_integration.py

* pin eyes_selenium to 5.9.0

* docs: update CHANGELOG.md
* docs: update keywords.html

--- a/python/eyes_robotframework/src/EyesLibrary/applitools.yaml
+++ b/python/eyes_robotframework/src/EyesLibrary/applitools.yaml
@@ -1,4 +1,4 @@
-### applitools.yaml 1.1
+### applitools.yaml 1.2
 ### START `SHARED SECTION` ###
 #server_url: "https://eyesapi.applitools.com" #optional
 #api_key: YOUR_API_KEY  #Could be specified as APPLITOOLS_API_KEY env variable
@@ -13,6 +13,8 @@
 #properties:
 #  - name: YOUR_PROPERTY_NAME
 #   value: YOUR_PROPERTY_VALUE
+
+#propagate_eyes_test_results: true   #Propagate Eyes results to robot `report.html`
 
 ###### START `AVAILABLE DURING `Eyes Open` CALL SECTION` ######
 app_name: YOUR_APP_NAME
