--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
         type: string
         required: true
       test-type:
-        description: testing type (unit, it, e2e, coverage)
+        description: testing type (unit, it, e2e, coverage, sanity)
         type: string
         required: false
       build-type:
@@ -23,7 +23,7 @@ on:
         type: string
         required: false
       links:
-        description: linked package names
+        description: package names to link
         required: false
       grep:
         description: grep pattern
