Fix/egc crash (#993)
* egc: add eg-tunnel as dev dep and update e2e test for testing the tunnel to spawn the tunnel/clean it up

* egc: add check to see if response.end has already been called before attempting to call writeHead and end. Needs test coverage

* add scripts package

* NO_CHANGELOG

* js/egc: skipping other e2e test due to chrome 103 error

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>
Co-authored-by: kyrylo <kyrylo.onufriiev@applitools.com>

--- a/js/packages/execution-grid-client/package.json
+++ b/js/packages/execution-grid-client/package.json
@@ -78,6 +78,8 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.6",
+    "@applitools/eg-tunnel": "^1.0.18",
+    "@applitools/scripts": "^1.1.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "12",
     "@types/node-fetch": "^2.6.1",
