make sure we ref Node elements intsead of reffing each attribute (#1015)
* make sure we ref Node elements intsead of reffing each attribute

* update pending changes

* update pending changes

* adjust refer to to include window and alignt with eyesCheckMapping logic

* Update js/packages/eyes-cypress/src/browser/commands.js

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* add test

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>
Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -88,7 +88,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+    Fix `Maximum call stack size exceeded` error in `eyesCheck`
 "@applitools/eyes-storybook":
   feature:
     - 
