--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -38,7 +38,8 @@ inputs:
 runs:
   using: composite
   steps:
-    - shell: ${{inputs.shell}}
+    - name: Test
+      shell: ${{inputs.shell}}
       working-directory: ${{inputs.working-directory}}
       env:
         APPLITOOLS_TEST_REMOTE: ${{inputs.remote}}
