--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test packages
 on:
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
-    branches-ignore: ['dependabot/**']
+    branches-ignore: ['dependabot/**', 'draft/**', 'play/**']
   workflow_dispatch:
     inputs:
       packages:
