--- a/.github/workflows/publish-universal.yml
+++ b/.github/workflows/publish-universal.yml
@@ -116,13 +116,11 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     steps:
-      - name: Check-out ${{github.ref_name}} branch
-        uses: actions/checkout@v3
-      - name: Check-out ${{needs.prepare.outputs.branch}} branch
+      - name: Check-out repository
         uses: actions/checkout@v3
         with:
           ref: ${{needs.prepare.outputs.branch}}
-          clean: false
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
