[api] Add new android devices (#1050)
* add new android devices

* add changelog

* skip AndroidDeviceName test

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -15,7 +15,7 @@ Apollo SDK:
     - 
 "@applitools/eyes-selenium":
   feature:
-    - 
+    - Added new android devices
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
@@ -24,7 +24,7 @@ Apollo SDK:
     - Fixed some issues with helper library usage
 "@applitools/eyes-webdriverio":
   feature:
-    - 
+    - Added new android devices
   bug-fix:
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
     - Avoided unexpected touch actions during `check` on Android apps
@@ -51,7 +51,7 @@ Apollo SDK:
     - Better support in DOM slot element
 "@applitools/eyes-protractor":
   feature:
-    - 
+    - Added new android devices
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
@@ -77,7 +77,7 @@ Apollo SDK:
     - Better support in DOM slot element
 "@applitools/eyes-nightwatch":
   feature:
-    - 
+    - Added new android devices
   bug-fix:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration
     - Fixed various issues during taking screenshots in landscape orientation on some native devices
