--- a/js/packages/eyes-api/package.json
+++ b/js/packages/eyes-api/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.6",
+    "@applitools/scripts": "^1.1.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
