--- a/.github/workflows/publish-testcafe.yml
+++ b/.github/workflows/publish-testcafe.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           if [ ${{github.event.inputs.multienv}} = true ]
           then
-            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"node-version\":12}]"
+            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"framework-version\":1.18, \"node-version\":12}]"
           else
             echo "::set-output name=environments::[{\"node-version\":16}]"
           fi
@@ -76,6 +76,8 @@ jobs:
         include: ${{fromJSON(needs.verify.outputs.environments)}}
     name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
+    env:
+      APPLITOOLS_TESTCAFE_VERSION: ${{matrix.framework-version}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v3
